# snakeAI_BE

./: .envexample  .gitignore  Anchor.toml  Cargo.toml  README.md  backend-wallet-full.json  backend-wallet.json  check_token_mint.js  convert_keypair.js  get_wallet_info.js  initialize_pools.js  package-lock.json  package.json  setup_contract.sh  setup_database.sh  setup_test_data.sql  snake_contract-keypair.json
.sqlx/: query-06dc7b4618e004eca317714bcdab8a88da1c586d4031e800479182120f0931bd.json  query-0e1242dfbd327c024662be02856e1095e09a365e4eb776d4c9f30071374fe53e.json  query-125cd8d37c1a85776036e2d2d7a2211f036a8ef97d82c83ccea8f659643041ff.json  query-1541e552dd98031ed3a145651635100cd1347641388cbe72fc71e9a23b6aac47.json  query-208e9d9fa4929cb8c0688df274dac6a405681d8990c0c9806543bbd68db1e039.json  query-3073c3537cd41cc2ab37c46f6aad857fa76fddf6cdf1501d6e0a268eff954f2f.json  query-331f75b1eb17f2e5cec1e4b7fb357416631e2460f1f99f53a855a0b04751614b.json  query-33bdc8921fe4f892ae4e43ddc0292f5f90325a5f1b3c3eef8e2e716dce0ea3d5.json  query-39195ed20619e113df726fdc6b4af6f2ddb96c7bd342b4604c2a8e6998b662da.json  query-3e2711f80c88f48b3aae18f4b359b1c9fef3d75e62afb3550c24199323030e1e.json  query-428032a3ea24aa889ca0a09496c1b9a24cfbe7de5d7f9b48b7d40abf101e61d1.json  query-42c23225bb18b45367c3dbf98884b62e06459187bfdb0f9551e415b15cffab99.json  query-579355ab6e6713f8fd550cfa87dcda48c11e2710d5f16af18abbbc7dd14552c6.json  query-640a3e4131ebb0a00146b2b7bd7dff1f4a2318e474f5b495b9aae7f0a1902a27.json  query-742b9eef92ad404b3b1ec285ce8b99e945b1b910f25bff376466c704a79fc9c8.json  query-7f5d72b51ead62d664af753717ab408bc3c94dd4c3e00ffcfc59282d40049b41.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8478b2ce9afe82fd731dad0202c15dfa26f991e6a92b31c8f11296ae13853919.json  query-8d6831d7c3db039cdcaeeb12c8f1f443a7b4e3b7429f97592b40e5c072b70075.json  query-8ef0a411c2c5aaf3c8919b48d1e10439b56fa86bc6e002a3b63555f2308341e0.json  query-90c5812f2077df08f5c1e5e389ddccf1a566563dd0a264d5db4603b39ddf6cff.json  query-ab39a7437d143b310a52f8f7c48e936a2158d7adc8ff39e7f27d78dd18f87e97.json  query-b33c182a5be14b7cf4d400df09712bff8a5fa41a442cd5643a77bbc1316d2a5f.json  query-bbb3043796b122800a7b5dd024a3de8e1761dd9df8487e898740961c80bc467c.json  query-bd05086d1240377412610a5f08bc347131337633be81559922cb3b2f22c03fa7.json  query-c4c85c225857263da6cebb52a92c8c38fcb28ee54b34059b9f4369d6d56a05ce.json  query-d02a96ce244987fb8098ef259f06d6474e2fa6057e23a233197d84af7e28ef34.json  query-e1b52165a03d4a8ddfef1875d30d29037736453d63bc8f7cf4eac4ba7594d96f.json  query-e25fdcc561e7200ff534572e4695256105fa7fc772ddf6d2da473280aa010e77.json  query-e3a519033827ab362c79b4e6526f546a25e08248fe4ed50a362333ffbdb9b4ea.json  query-f619e38285aab9b0e0ef65f6e97d97d10fcebc0921da4b6d18a84804864c4205.json  query-fd24b89a9e34258c2c377cdcbd31a19d461362d75503429440385242469ed223.json
M1_testing_result/: POSTMAN_API_TESTING_GUIDE.md  Snake_AI_Patron_Framework.postman_collection.json  TESTING_GUIDE.md
backend/: Dockerfile
backend/database/: Cargo.toml
backend/database/src/: error.rs  lib.rs  pool.rs
backend/database/src/repository/: mod.rs  otc_swap.rs  reward.rs  session.rs  tweet.rs  tweet_template.rs  user.rs  util.rs  values.rs
backend/database/src/service/: mod.rs  otc_swap.rs  reward.rs  session.rs  tweet.rs  tweet_template.rs  user.rs  util.rs  values.rs
backend/jobs/: Cargo.toml
backend/jobs/src/: lib.rs  main.rs  phase1_sync_job.rs  reward_sync_job.rs  solana_job.rs  twitter_api.rs  twitter_job.rs
backend/libraries/types/: Cargo.toml
backend/libraries/types/src/: lib.rs
backend/libraries/types/src/dto/: mod.rs  otc_swap.rs  patron.rs  user.rs
backend/libraries/types/src/error/: api_error.rs  db_error.rs  mod.rs  request_error.rs
backend/libraries/types/src/model/: mod.rs  otc_swap.rs  reward.rs  session.rs  tweet.rs  tweet_template.rs  user.rs  value.rs
backend/libraries/types/src/response/: api_response.rs  mod.rs
backend/server/: Cargo.toml
backend/server/src/: lib.rs  main.rs  state.rs
backend/server/src/handler/: auth.rs  dev.rs  mod.rs  otc_swap.rs  patron.rs  patron_minimal.rs  test.rs  tweet_template.rs  user.rs
backend/server/src/middleware/: auth.rs
backend/server/src/routes/: auth.rs  mod.rs  user.rs
backend/server/src/services/: auto_sync.rs  mining.rs  mod.rs  solana_sync.rs
backend/server/src/utils2/: initializer.rs
deploy/: .env.production.template  deploy-contracts.sh  deploy-production.sh  docker-compose.prod.yml  migrate-database.sh
frontend/: Dockerfile  convert_keypair.js  craco.config.js  jest.config.js  next.config.js  nginx.conf  package-lock.json  package.json  server.js  tailwind.config.js
migrations/: 20241112082345_init.up.sql  20250115000000_create_otc_swaps_table.down.sql  20250408122019_users.up.sql  20250408122556_sessions.down.sql  20250408122556_sessions.up.sql  20250408123652_tweets.down.sql  20250408123652_tweets.up.sql  20250408123841_rewards.down.sql  20250408123841_rewards.up.sql  20250411101225_values.down.sql  20250411101225_values.up.sql  20250423092838_rewards_add_media_id.down.sql  20250423092838_rewards_add_media_id.up.sql  20250709120000_add_phase_to_tweets.down.sql  20250709120000_add_phase_to_tweets.up.sql  20250709130000_add_patron_framework_fields.down.sql  20250709130000_add_patron_framework_fields.up.sql  20250718130000_add_phase_to_rewards.down.sql  20250718130000_add_phase_to_rewards.up.sql  20250727000000_create_schema.down.sql  20250727000000_create_schema.up.sql  20250729000000_add_role_transaction_columns.down.sql  20250729000000_add_role_transaction_columns.up.sql  20250730110000_add_phase_column_to_rewards.up.sql  20250806110000_add_is_following_to_users.down.sql  20250806110000_add_is_following_to_users.up.sql  20250815000000_create_otc_swaps_table.up.sql  20250830000000_add_accumulated_reward_to_users.down.sql  20250830000000_add_accumulated_reward_to_users.up.sql  20250901000000_create_tweet_templates.down.sql  20250901000000_create_tweet_templates.up.sql  20250902000000_add_twitter_tokens.down.sql  (+3 more)
src/: env.rs  (+3 more)
(+220 files in other folders)
