[workspace]
members = [
    "backend/database",
    "backend/libraries/types",
    "backend/libraries/utils",
    "backend/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
twitter-v2 = "0.1.8"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
