[workspace]
members = [
    "backend/database",
    "backend/libraries/types",
    "backend/libraries/utils",
    "backend/server",
    "backend/jobs",
    "programs/snake_contract",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
anchor-client = { version = "0.31.1" }
anyhow = "1.0.95"
async-trait = "0.1.88"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.7"
bs58 = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
hyper = { version = "1.6.0", features = ["full"] }
qrcode-generator = "5.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.15" }
reqwest-oauth1 = { version = "0.3.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.2", features = ["full"] }
twitter-v2 = "0.1.8"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
url = "2.5.4"
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
