[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
utils.path = "../libraries/utils"
types.path = "../libraries/types"
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
