[package]
name = "jobs"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
borsh.workspace = true
chrono.workspace = true
database.path = "../database"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snake_contract = { path = "../../programs/snake_contract", features = [
    "no-entrypoint",
] }
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
types.path = "../libraries/types"
urlencoding.workspace = true
utils.path = "../libraries/utils"
