[package]
name = "jobs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jobs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
borsh.workspace = true
chrono.workspace = true
database.path = "../database"
qrcode-generator.workspace = true
reqwest.workspace = true
reqwest-oauth1.workspace = true
serde.workspace = true
serde_json.workspace = true
snake_contract = { path = "../../programs/snake_contract", features = [
    "no-entrypoint",
] }
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
types.path = "../libraries/types"
twitter-v2.workspace = true
urlencoding.workspace = true
utils.path = "../libraries/utils"
anchor-client.workspace = true
log.workspace = true