[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
anchor-client.workspace = true
base64.workspace = true
bincode.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
database.path = "../database"
hyper.workspace = true
qrcode-generator.workspace = true
serde.workspace = true
serde_json.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
twitter-v2.workspace = true
utils.path = "../libraries/utils"
uuid.workspace = true
types.path = "../libraries/types"
snake_contract = { path = "../../programs/snake_contract", features = [
    "no-entrypoint",
] }
anyhow.workspace = true
