[package]
name = "types"
version.workspace = true
edition.workspace = true

[dependencies]
anchor-client.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
